[package]
name = "fluid_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluid_engine = {path = "../fluid_engine"}
js-sys = "^0.3.46"
wasm-bindgen = "^0.2.69"
colorgrad = "^0.5.0"

[dependencies.web-sys]
version = "^0.3.46"
features = [ 
    "KeyboardEvent",
    "CanvasRenderingContext2d",
    "Document", 
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "Window"
]

[lib]
crate-type = ["cdylib"]
